--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ input {
 }
 
 body {
-  background-color: black;
+  background-color: #fff;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
@@ -235,6 +235,12 @@ form {
   width: 150px;
   background: white;
   cursor: pointer;
+  border: 1px solid #04aaff;
+  color: #333;
+}
+.authBtn:hover{
+  background-color: #04aaff;
+  color: white;
 }
 
 /* AuthForm */
@@ -244,7 +250,7 @@ form {
   width: 100%;
   padding: 10px;
   border-radius: 30px;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: rgb(232, 240, 254);
   margin-bottom: 10px;
   font-size: 12px;
   color: black;
