git address changed

--- a/src/styles.css
+++ b/src/styles.css
@@ -107,7 +107,7 @@ form {
   flex-grow: 1;
   height: 40px;
   padding: 0px 20px;
-  color: white;
+  color: black;
   border: 1px solid #04aaff;
   border-radius: 20px;
   font-weight: 500;
